<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/edit_width"
    android:layout_height="match_parent"
    android:layout_gravity="top|center_horizontal"
    android:gravity="top|center"
    android:orientation="vertical"
    android:layout_margin="@dimen/content_margin"
    tools:context="com.quickthink.tvchildrenmonitor.MonitorTimerEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_row_item_height"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting_monitor_start_time" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <TimePicker
                android:id="@+id/setting_monitor_start_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:timePickerMode="spinner" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_row_item_height"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting_monitor_end_time" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">
                <TimePicker
                    android:id="@+id/setting_monitor_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:timePickerMode="spinner"
                    />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_row_item_height"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting_monitor_active_day" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/setting_monitor_active_Monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_monitor_active_Monday" />

                <CheckBox
                    android:id="@+id/setting_monitor_active_Tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_monitor_active_Tuesday" />

                <CheckBox
                    android:id="@+id/setting_monitor_active_Wednesdays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_monitor_active_Wednesday" />

                <CheckBox
                    android:id="@+id/setting_monitor_active_Thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_monitor_active_Thursday" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/setting_monitor_active_Friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_monitor_active_Friday" />

                <CheckBox
                    android:id="@+id/setting_monitor_active_Saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_monitor_active_Saturday" />

                <CheckBox
                    android:id="@+id/setting_monitor_active_Sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_monitor_active_Sunday" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/setting_save_monitor_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_save" />

        <Button
            android:id="@+id/setting_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_cancel" />

    </LinearLayout>
</LinearLayout>
